--- a/templates/user/signin.html
+++ b/templates/user/signin.html
@@ -3,9 +3,8 @@
 {% block title %}
     로그인
 {% endblock %}
+
     {% block content %}
-    <form method="post">
-        {% csrf_token %}
         <div class="container">
             <div class="wrap">
                 <h2 class="title-center"> 로그인 </h2> 
@@ -17,7 +16,7 @@
                     </div>
                     <div class="form-group mt-2 mb-2">
                         <label for="password">비밀번호</label>
-                        <input type="password" class="form-control" id="password1" name="password1">
+                        <input type="password" class="form-control" id="password" name="password">
                     </div>
                     <hr>
                     {% if error_msg %}
