상품등록 템플릿 추가

--- a/templates/erp/product_create.html
+++ b/templates/erp/product_create.html
@@ -10,20 +10,28 @@
             <h2 class="title-center"> 상품등록 </h2>
             <form class="form-area">
                 <div class="form-group mt-2 mb-2">
-                    <label for="username">이름</label>
-                    <input type="text" class="form-control" id="username" name="username">
+                    <label for="code">상품 코드</label>
+                    <input type="text" class="form-control" id="code" name="code">
                 </div>
                 <div class="form-group mt-2 mb-2">
-                    <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                    <label for="name">상품 이름</label>
+                    <input type="text" class="form-control" id="nam" name="nam">
                 </div>
                 <div class="form-group mt-2 mb-2">
-                    <label for="password2">비밀번호 확인</label>
-                    <input type="password" class="form-control" id="password2" name="password2">
+                    <label for="description">상품 설명</label>
+                    <input type="text" class="form-control" id="description" name="description">
+                </div>
+                <div class="form-group mt-2 mb-2">
+                    <label for="price">상품 가격</label>
+                    <input type="text" class="form-control" id="price" name="price">
+                </div>
+                <div class="form-group mt-2 mb-2">
+                    <label for="sizes">사이즈</label>
+                    <input type="text" class="form-control" id="sizes" name="sizes">
                 </div>
                 <hr>
                 <div style="float: right">
-                    <button type="submit" class="btn btn-primary">회원가입</button>
+                    <button type="submit" class="btn btn-primary">등록</button>
                     <a href="/signin" class="btn btn-secondary">로그인 페이지로</a>
                 </div>
             </form>
