--- a/templates/user/signin.html
+++ b/templates/user/signin.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="wrap">
                 <h2 class="title-center"> 로그인 </h2> 
-                <form method="post">
+                <form method="post" action="/signin/">
                     {% csrf_token %}
                     <div class="form-group mt-2 mb-2">
                         <label for="username">이름</label>
@@ -29,7 +29,6 @@
                         <a href="/signup" class="btn btn-secondary">회원가입 페이지로</a>
                     </div>
                 </form>
-
             </div>
         </div>
     {% endblock %}
