--- a/templates/user/signin.html
+++ b/templates/user/signin.html
@@ -1,5 +1,20 @@
 {% extends 'base.html' %}
 
+{% block content %}
+<form method="post" action="{% url 'signin' %}">
+    {% csrf_token %}
+    <p>{{ form.as_p }}</p>
+    <div style="float: right">
+        <button type="submit" class="btn btn-primary">로그인</button>
+        <a href="/signup" class="btn btn-secondary">회원가입 페이지로</a>
+    </div>
+</form>
+{% endblock %}
+
+
+
+{% comment %} {% extends 'base.html' %}
+
 {% block title %}
     로그인
 {% endblock %}
@@ -8,7 +23,7 @@
         <div class="container">
             <div class="wrap">
                 <h2 class="title-center"> 로그인 </h2> 
-                <form method="post" action="/signin/">
+                <form method="post" action="{% url 'signin' %}">
                     {% csrf_token %}
                     <div class="form-group mt-2 mb-2">
                         <label for="username">이름</label>
@@ -25,10 +40,10 @@
                         </div>
                     {% endif %}
                     <div style="float: right">
-                        <button type="submit" class="btn btn-primary">로그인</button>
+                        <button type="submit" value="Submit" class="btn btn-primary">로그인</button>
                         <a href="/signup" class="btn btn-secondary">회원가입 페이지로</a>
                     </div>
                 </form>
             </div>
         </div>
-    {% endblock %}
+    {% endblock %} {% endcomment %}
