--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} | spartaSNS</title>
+    <title>{% block title %}{% endblock %} | musinsa_project</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -34,13 +34,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="/">재고관리</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"> 친구 <span class="sr-only"></span></a>
-                </li>
-            </ul>
-        </div>
+    
         <form class="form-inline my-2 my-lg-0">
             {% if not user.is_authenticated %}
             <ul class="navbar-nav mr-auto">
@@ -53,6 +47,15 @@
             </ul>
             {% else %}
             <ul class="navbar-nav mr-auto">
+                {% if request.path == '/product-list/' %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'product-create' %}"> 상품등록 </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'product-list' %}"> 상품목록 </a>
+                    </li>
+                {% endif %}
                 <li class="nav-item disabled">
                     <span class="nav-link">
                         {{ user.username }} 님 반갑습니다!
