--- a/templates/erp/product_create.html
+++ b/templates/erp/product_create.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <h1>새 상품 등록</h1>
-  <form method="POST">
+  <form method="POST" action="{% url 'product-create' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">등록</button>
