--- a/templates/erp/product_list.html
+++ b/templates/erp/product_list.html
@@ -1,6 +1,11 @@
 <!-- product_list.html -->
 {% extends 'base.html' %}
 
+{% block title %}
+    상품목록
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,3 +33,4 @@
 	</table>
 </body>
 </html>
+{% endblock %}
